Tue Apr 17 16:53:49 2001  Loic Dachary  <loic@gnu.org>

	* fr/about/Constitution-fr.fr.tex: Specify that France is the
	  realm of action, a member excluded from FSF Europe is excluded
	  from FSF France.

Mon Apr 16 14:04:07 2001  Loic Dachary  <loic@gnu.org>

	* fr/*.LG.*: internationalize & add tranlsation bar in boilerplate

Mon Apr 16 12:37:41 2001  Loic Dachary  <loic@gnu.org>

	* fr/{boilerplate.shtml,header.html,footer.html,blue.css}: 
	  temporary boilerplate while waiting for a proper layout
	  for FSF Europe web sites.
	
	* fr/images/{gnulogo.jpg,pix.png}: graphics for boilerplate

Sun Apr 15 12:05:14 2001  Loic Dachary <loic@gnu.org>

	* fr/server/sysadmin-france.texi: Account Management chapter

	* fr/server/sysadmin-france.html: Add HTML format

	* fr/server/Makefile: Generate HTML format

Fri Apr 13 16:11:05 2001  Loic Dachary  <loic@gnu.org>

	* fr/server/sysadmin-france.texi: System administration information
	  for GNU and FSF machines located in France.

Fri Apr 13 16:00:52 2001  Loic Dachary  <loic@gnu.org>

	* fsfe/fr/birth: Add birth act of france.fsfeurope.org

Fri Apr 13 15:25:36 2001  Loic Dachary  <loic@senga.org>

	* fr: Subdirectory for the france.fsfeurope.org web site

Fri Apr 13 14:40:42 2001  Loic Dachary  <loic@senga.org>

	* drafts/patrick.hutton: add draft from patrick.hutton@idealx.com

Fri Apr 13 14:35:41 2001  Loic Dachary  <loic@senga.org>

	* drafts: Add the draft directory for unpublished documents
	  that must be considered as work in progress.

2001-03-22 Axel von Arnim <vonarnim@club-internet.fr>
        * minor corrections in siae/siae.fr.html and
          documents/doi.fr.html
        * made footer identical in both pages

2001-03-21  Frederic Couchet  <fcouchet@april.org>

	* corrections in siae/siae.fr.html

2001-03-20 Ludovic Penet <ludovicpenet@europe.com>
        * Translated siae in French

2001-03-19 Axel von Arnim <vonarnim@club-internet.fr>
        * French homepage and DOI: corrections
