@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <HTML>
 <HEAD>
-<TITLE>Free Software Foundation Europe - FSF Europe</TITLE>
+<TITLE>Free Software Foundation Europe - FSF Europe - Homepage</TITLE>
 <LINK REV="made" HREF="mailto:webmasters@fsfeurope.org">
 </HEAD>
 <BODY>
@@ -35,7 +35,7 @@ information, we also recommend checking out the <A
 HREF="http://mailman.fsfeurope.org">mailing lists</a>.</p>
 
 <!-- Mailinglists -->
-<h4><a name="mailinglists">Mailinglists</a></h4>
+<h4><a name="mailinglists">Mailing Lists</a></h4>
 <p>To subscibe to any of these mailinglists please send an email with subject
 "subscribe" to <em>&lt;listname&gt;-request@fsfeurope.org</em> or use the web
 interface provided for each list.</p>
@@ -56,6 +56,27 @@ interface provided for each list.</p>
   href="http://mailman.fsfeurope.org/pipermail/web">archive</a>)</li>
 </ul>
 
+<!-- Press Release Mailing Lists -->
+<h4><a name="pressrelease-mailinglists">Press Release Mailing Lists</a></h4>
+<p>Information for the press are located in our <a href="press/">press
+section</a>.</p>
+<p>These three mailing lists are post-only by the FSFE and do only contain
+press releases. The subscriber lists are non public.</p>
+<ul>
+	<li>press-release (for English press releases) (<a
+	href="http://mailman.fsfeurope.org/mailman/listinfo/press-release">web
+	interface</a>, <a
+	href="http://mailman.fsfeurope.org/pipermail/press-release">archive</a>)</li>
+	<li>press-release-fr (for French press releases) (<a
+	href="http://mailman.fsfeurope.org/mailman/listinfo/press-release-fr">web
+	interface</a>, <a
+	href="http://mailman.fsfeurope.org/pipermail/press-release-fr">archive</a>)</li>
+	<li>press-release-de (for German press releases) (<a
+	href="http://mailman.fsfeurope.org/mailman/listinfo/press-release-de">web
+	interface</a>, <a
+	href="http://mailman.fsfeurope.org/pipermail/press-release-de">archive</a>)</li>
+</ul>
+
 <!-- Documents -->
 <h4><a name="documents">Documents</a></h4>
 <p>The following documents are available.</p>
@@ -73,7 +94,7 @@ interface provided for each list.</p>
 <P>
 Updated:
 <!-- hhmts start -->
-15 March 2001 bernhard
+17 Apr 2001 lhorn
 <!-- hhmts end -->
 &nbsp;
 &nbsp;
