@@ -1,3 +1,12 @@
+Tue Apr 17 20:40:17 CEST 2001	Lutz Horn <lh@lutz-horn.d>
+
+	* Added links to presse-release{-de|-fr} on index.html and on
+	  mailman/index.html
+
+	* Added contact/index.html
+
+	* Added press/index.html
+
 Tue Apr 17 16:53:49 2001  Loic Dachary  <loic@gnu.org>
 
 	* fr/about/Constitution-fr.fr.tex: Specify that France is the
